Set header stats to nowrap (mobile fix)

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -18,6 +18,7 @@ header {
     grid-area: stats;
     justify-self: end;
     text-transform: initial;
+    white-space: nowrap;
 }
 .menuArea {
     grid-area: menu;
